--- a/package.json
+++ b/package.json
@@ -23,7 +23,9 @@
     "bootstrap": "^4.3.1",
     "core-js": "^2.5.4",
     "font-awesome": "^4.7.0",
+    "jquery": "^3.4.1",
     "ngx-bootstrap": "^5.0.0",
+    "popper": "^1.0.1",
     "primeicons": "^1.0.0",
     "primeng": "^8.0.1",
     "rxjs": "~6.5.2",
