--- a/package.json
+++ b/package.json
@@ -25,6 +25,7 @@
     "font-awesome": "^4.7.0",
     "jquery": "^3.4.1",
     "ngx-bootstrap": "^5.0.0",
+    "ngx-cookie-service": "^2.2.0",
     "popper.js": "^1.15.0",
     "primeicons": "^1.0.0",
     "primeng": "^8.0.1",
