--- a/package.json
+++ b/package.json
@@ -26,6 +26,7 @@
     "jquery": "^3.4.1",
     "ngx-bootstrap": "^5.0.0",
     "ngx-cookie-service": "^2.2.0",
+    "ngx-image-cropper": "^2.0.2",
     "popper.js": "^1.15.0",
     "primeicons": "^1.0.0",
     "primeng": "^8.0.1",
